RAIN-6676: DSS UI APK Alignment on bar chart and Tab name issue fixed

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/scroll-table.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/scroll-table.scss
@@ -40,8 +40,14 @@
     display: flex;
     cursor: pointer;
     padding-right: 10px;
+    width: 100%;
 }
 
+.table-search-wrapper{
+    display:flex;
+    width:100%;
+    align-items:center;
+}
 .table-switch-card-inactive{
     /* Frame 58 */
 
